# chrono-intervals

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: github-actions.yml
src/: generator.rs  grouping.rs  intervals.rs  lib.rs
src/intervals_impl/: boundaries.rs  mod.rs
tests/: edge_cases.rs  grouping_per_day.rs  grouping_per_month.rs  grouping_per_week.rs  integration_test.rs  interval_extension.rs  precision.rs  timezone_and_offset.rs  timezone_format.rs
tests/common/: mod.rs
