[package]
name = "chrono-intervals"
description = "Create chrono time intervals as per-day, per-week etc."
version = "0.2.0"
edition = "2021"
license-file = "LICENSE-APACHE"
readme = "README.md"
repository = "https://github.com/sgasse/chrono-intervals"

[dependencies]
chrono = "0.4.22"

[dev-dependencies]
rand = "0.8.5"
