[package]
name = "chrono-intervals"
description = "Create chrono time intervals as per-day, per-week etc."
keywords = ["date", "time", "interval"]
documentation = "https://docs.rs/chrono-intervals/"
repository = "https://github.com/sgasse/chrono-intervals"
homepage = "https://github.com/sgasse/chrono-intervals"
readme = "README.md"
license = "MIT/Apache-2.0"
version = "0.3.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"

[dev-dependencies]
rand = "0.8.5"
